fixed bg not showing on safari browser

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,7 +2,7 @@
   background-image: url(../public/banner.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   background-attachment: fixed;
   -o-background-size: cover;
   -moz-background-size: cover;
